--- a/software/flux-templates/kustomization-stamp.yaml
+++ b/software/flux-templates/kustomization-stamp.yaml
@@ -1,14 +1,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: stamp-${GITOPS_STAMP}-applications
+  name: stamp-${GITOPS_STAMP}
   namespace: flux-system
 spec:
   interval: 5m
-  path: "./software/stamp/${GITOPS_STAMP}/applications"
+  path: "./software/stamp/${GITOPS_STAMP}"
   prune: true
   sourceRef:
     kind: GitRepository
     name: ${REPO_NAME}-repo
-  dependsOn:
-    - name: registry
