--- a/software/stamp/sample/kustomization.yaml
+++ b/software/stamp/sample/kustomization.yaml
@@ -2,16 +2,15 @@
 # This demonstrates the component/application separation pattern
 #
 # Architecture:
-# 1. Components (Infrastructure): ingress-nginx, database
+# 1. Components (Infrastructure): cert-manager, registry, ingress-nginx, database
 # 2. Applications (Business Logic): api, website
 #
-# Usage:
-#   kubectl apply -k software/stamp/sample/
-
+# Orchestration: Components deploy first, then applications
+#
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 # Main stamp orchestration - components first, then applications
 resources:
   - components
-  # - applications
+  - applications
