--- a/software/flux-templates/kustomization-applications.yaml
+++ b/software/flux-templates/kustomization-applications.yaml
@@ -1,12 +1,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: stamp-${GITOPS_STAMP}
+  name: stamp-${GITOPS_STAMP}-applications
   namespace: flux-system
 spec:
   interval: 5m
-  path: "./software/stamp/${GITOPS_STAMP}"
+  path: "./software/stamp/${GITOPS_STAMP}/applications"
   prune: true
   sourceRef:
     kind: GitRepository
     name: ${REPO_NAME}-repo
+  dependsOn:
+    - name: cert-manager
+    - name: cert-manager-certs
+    - name: registry
