fix: correct applications dependency names for component Kustomizations
- Change dependency names from cert-manager to component-cert-manager
- Change dependency names from cert-manager-certs to component-cert-manager-certs
- Change dependency names from registry to component-registry
- Ensures proper dependency chain: components → applications

--- a/software/flux-templates/kustomization-applications.yaml
+++ b/software/flux-templates/kustomization-applications.yaml
@@ -11,6 +11,6 @@ spec:
     kind: GitRepository
     name: ${REPO_NAME}-repo
   dependsOn:
-    - name: cert-manager
-    - name: cert-manager-certs
-    - name: registry
+    - name: component-cert-manager
+    - name: component-cert-manager-certs
+    - name: component-registry
