fix: correct Flux vs kustomize architecture
- Create stamp-components template for Flux orchestration
- Update applications dependency to stamp components
- Fix setup script to apply templates directly
- Proper separation: Flux manages, kustomize builds

--- a/software/flux-templates/kustomization-applications.yaml
+++ b/software/flux-templates/kustomization-applications.yaml
@@ -11,6 +11,4 @@ spec:
     kind: GitRepository
     name: ${REPO_NAME}-repo
   dependsOn:
-    - name: component-cert-manager
-    - name: component-cert-manager-certs
-    - name: component-registry
+    - name: stamp-${GITOPS_STAMP}-components
