--- a/software/stamp/sample/components/kustomization.yaml
+++ b/software/stamp/sample/components/kustomization.yaml
@@ -1,10 +1,11 @@
 # Components Layer - Infrastructure Services
-# These are foundational services that applications consume
+# These are foundational services that this stamp needs
 #
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 # Reference global components that this stamp needs
 resources:
-  - ../../components/cert-manager
-  - ../../components/registry
+  - ../../../components/cert-manager
+  - ../../../components/cert-manager-certs
+  - ../../../components/registry
