fix: correct component paths to ../../../components
- From software/stamp/sample/components to software/components
- Path should be ../../../components not ../../components

--- a/software/stamp/sample/components/kustomization.yaml
+++ b/software/stamp/sample/components/kustomization.yaml
@@ -6,6 +6,6 @@ kind: Kustomization
 
 # Reference global components that this stamp needs
 resources:
-  - ../../components/cert-manager
-  - ../../components/cert-manager-certs
-  - ../../components/registry
+  - ../../../components/cert-manager
+  - ../../../components/cert-manager-certs
+  - ../../../components/registry
