--- a/software/stamp/sample/components/kustomization.yaml
+++ b/software/stamp/sample/components/kustomization.yaml
@@ -4,8 +4,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Reference global components that this stamp needs
+# Reference specific YAML files from global components
 resources:
-  - ../../../components/cert-manager
-  - ../../../components/cert-manager-certs
-  - ../../../components/registry
+  # cert-manager component
+  - ../../../components/cert-manager/namespace.yaml
+  - ../../../components/cert-manager/source.yaml
+  - ../../../components/cert-manager/release.yaml
+  # cert-manager-certs component
+  - ../../../components/cert-manager-certs/issuer.yaml
+  - ../../../components/cert-manager-certs/certificates.yaml
+  # registry component
+  - ../../../components/registry/namespace.yaml
+  - ../../../components/registry/pvc.yaml
+  - ../../../components/registry/certificate.yaml
+  - ../../../components/registry/deployment.yaml
+  - ../../../components/registry/service.yaml
