--- a/software/stamp/sample/applications/kustomization.yaml
+++ b/software/stamp/sample/applications/kustomization.yaml
@@ -1,20 +1,23 @@
-# Applications Layer - Business Logic Services
-# These applications consume the infrastructure components
-#
-# Applications included:
-# - api: Backend API service
-# - website: Frontend web service
-
-apiVersion: kustomize.config.k8s.io/v1beta1
+######################
+## Sample Stamp Applications
+######################
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
-
-# Application resources - can be deployed in parallel
-resources:
-  - api/namespace.yaml
-  - api/deployment.yaml
-  - api/service.yaml
-  - api/ingress.yaml
-  - website/namespace.yaml
-  - website/deployment.yaml
-  - website/service.yaml
-  - website/ingress.yaml
+metadata:
+  name: sample-applications
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: component-cert-manager
+    - name: component-cert-manager-certs
+    - name: component-registry
+  interval: 5m
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: sample-repo
+  path: ./software/stamp/sample/applications
+  prune: true
+  wait: true
