--- a/software/stamp/sample/kustomization.yaml
+++ b/software/stamp/sample/kustomization.yaml
@@ -23,28 +23,28 @@ spec:
       name: cert-manager
       namespace: cert-manager
 
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: sample-cert-manager-certs
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: sample-cert-manager
-#   interval: 5m
-#   retryInterval: 1m
-#   timeout: 5m
-#   sourceRef:
-#     kind: GitRepository
-#     name: sample-repo
-#   path: ./software/components/cert-manager-certs
-#   prune: true
-#   wait: true
-#   healthChecks:
-#     - kind: Certificate
-#       name: ca-certificate
-#       namespace: cert-manager
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: sample-cert-manager-issuers
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: component-cert-manager
+  interval: 5m
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: sample-repo
+  path: ./software/components/cert-manager/issuers
+  prune: true
+  wait: true
+  healthChecks:
+    - kind: Certificate
+      name: ca-certificate
+      namespace: cert-manager
 
 # ---
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
