fix: flux setup

--- a/software/stamp/sample/kustomization.yaml
+++ b/software/stamp/sample/kustomization.yaml
@@ -6,45 +6,71 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: component-cert-manager
+  name: component-certs
   namespace: flux-system
 spec:
-  interval: 5m
+  interval: 1h
   retryInterval: 1m
   timeout: 5m
   sourceRef:
     kind: GitRepository
-    name: software-repo
-  path: ./software/components/cert-manager
+    name: flux-system
+  path: ./software/components/certs
   prune: true
   wait: true
   healthChecks:
     - kind: Deployment
       name: cert-manager
       namespace: cert-manager
-
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: component-cert-manager-issuers
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: component-cert-manager
-  interval: 5m
-  retryInterval: 1m
-  timeout: 5m
-  sourceRef:
-    kind: GitRepository
-    name: sample-repo
-  path: ./software/components/cert-manager/issuers
-  prune: true
-  wait: true
-  healthChecks:
-    - kind: Certificate
-      name: ca-certificate
+    - kind: Deployment
+      name: cert-manager-cainjector
       namespace: cert-manager
+    - kind: Deployment
+      name: cert-manager-webhook
+      namespace: cert-manager
+
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: component-cert-manager
+#   namespace: flux-system
+# spec:
+#   interval: 5m
+#   retryInterval: 1m
+#   timeout: 5m
+#   sourceRef:
+#     kind: GitRepository
+#     name: software-repo
+#   path: ./software/components/cert-manager
+#   prune: true
+#   wait: true
+#   healthChecks:
+#     - kind: Deployment
+#       name: cert-manager
+#       namespace: cert-manager
+
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: component-cert-manager-issuers
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: component-cert-manager
+#   interval: 5m
+#   retryInterval: 1m
+#   timeout: 5m
+#   sourceRef:
+#     kind: GitRepository
+#     name: sample-repo
+#   path: ./software/components/cert-manager/issuers
+#   prune: true
+#   wait: true
+#   healthChecks:
+#     - kind: Certificate
+#       name: ca-certificate
+#       namespace: cert-manager
 
 # ---
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
