--- a/software/stamp/sample/kustomization.yaml
+++ b/software/stamp/sample/kustomization.yaml
@@ -50,8 +50,25 @@ spec:
     - kind: Secret
       name: root-ca-secret
       namespace: default
-
-
+---
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: component-certs-issuer
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: component-certs-ca
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./software/components/certs-issuer
+  prune: true
+  wait: true
 
 
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
