fix: restructure stamp for proper FluxCD root kustomization pattern
- Rename kustomization.yaml to flux-kustomizations.yaml (contains Flux Kustomizations)
- Create proper kustomization.yaml (kustomize config) that references the resources
- Remove conflicting kustomization.yml file
- Enables bootstrap to properly apply all YAML files in stamp directory

--- a/software/stamp/sample/kustomization.yaml
+++ b/software/stamp/sample/kustomization.yaml
@@ -1,163 +1,6 @@
-######################
-## Sample Stamp Components
-## These must complete before applications
-######################
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: component-certs
-  namespace: flux-system
-spec:
-  interval: 1h
-  retryInterval: 1m
-  timeout: 5m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./software/components/certs
-  prune: true
-  wait: true
-  healthChecks:
-    - kind: Deployment
-      name: cert-manager
-      namespace: cert-manager
-    - kind: Deployment
-      name: cert-manager-cainjector
-      namespace: cert-manager
-    - kind: Deployment
-      name: cert-manager-webhook
-      namespace: cert-manager
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: component-certs-ca
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: component-certs
-  interval: 1h
-  retryInterval: 1m
-  timeout: 5m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./software/components/certs-ca
-  prune: true
-  wait: true
-  healthChecks:
-    - kind: Secret
-      name: root-ca-secret
-      namespace: default
----
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: component-certs-issuer
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: component-certs-ca
-  interval: 1h
-  retryInterval: 1m
-  timeout: 5m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./software/components/certs-issuer
-  prune: true
-  wait: true
 
-
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: component-cert-manager
-#   namespace: flux-system
-# spec:
-#   interval: 5m
-#   retryInterval: 1m
-#   timeout: 5m
-#   sourceRef:
-#     kind: GitRepository
-#     name: software-repo
-#   path: ./software/components/cert-manager
-#   prune: true
-#   wait: true
-#   healthChecks:
-#     - kind: Deployment
-#       name: cert-manager
-#       namespace: cert-manager
-
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: component-cert-manager-issuers
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: component-cert-manager
-#   interval: 5m
-#   retryInterval: 1m
-#   timeout: 5m
-#   sourceRef:
-#     kind: GitRepository
-#     name: sample-repo
-#   path: ./software/components/cert-manager/issuers
-#   prune: true
-#   wait: true
-#   healthChecks:
-#     - kind: Certificate
-#       name: ca-certificate
-#       namespace: cert-manager
-
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: sample-registry
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: sample-cert-manager-certs
-#   interval: 5m
-#   retryInterval: 1m
-#   timeout: 5m
-#   sourceRef:
-#     kind: GitRepository
-#     name: sample-repo
-#   path: ./software/components/registry
-#   prune: true
-#   wait: true
-#   healthChecks:
-#     - kind: Deployment
-#       name: registry
-#       namespace: registry
-
-# ######################
-# ## Sample Stamp Applications
-# ## These depend on all components being ready
-# ######################
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: sample-applications
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: sample-cert-manager
-#     - name: sample-cert-manager-certs
-#     - name: sample-registry
-#   interval: 5m
-#   retryInterval: 1m
-#   timeout: 5m
-#   sourceRef:
-#     kind: GitRepository
-#     name: sample-repo
-#   path: ./software/stamp/sample/applications
-#   prune: true
-#   wait: true
+resources:
+  - flux-kustomizations.yaml
+  - repository.yaml
