--- a/software/stamp/bootstrap.yaml
+++ b/software/stamp/bootstrap.yaml
@@ -6,7 +6,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: bootstrap-sample-stamp
+  name: bootstrap-stamp
   namespace: flux-system
 spec:
   interval: 1m
