--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,33 @@
-# OSDU-CI Environment Configuration
+# HostK8s Environment Configuration
 # Copy this file to .env and uncomment/modify as needed
 # Most settings have sensible defaults - only override what you need
+
+# =============================================================================
+# LOGGING
+# =============================================================================
+
+# LOG_LEVEL=debug                         # Log level: debug, info, warn, error
 
 # =============================================================================
 # CLUSTER SETTINGS
 # =============================================================================
 
-# CLUSTER_NAME=osdu-ci                    # Cluster name (default: osdu-ci)
-# K8S_VERSION=v1.33.2                     # Kubernetes version (default: latest)
-# KIND_CONFIG=default                     # Kind config: minimal, simple, default
+# CLUSTER_NAME=hostk8s                   # Cluster name (default: hostk8s)
+# K8S_VERSION=v1.33.2                    # Kubernetes version (default: latest)
+# KIND_CONFIG=default                    # Kind config: minimal, simple, default
 
 # =============================================================================
 # INFRASTRUCTURE ADD-ONS
 # =============================================================================
 
-# FLUX_ENABLED=false                      # GitOps with Flux
-# METALLB_ENABLED=false                   # Manual LoadBalancer support
-# INGRESS_ENABLED=false                   # Manual NGINX Ingress Controller
+# FLUX_ENABLED=true                      # GitOps with Flux
+# METALLB_ENABLED=false                  # Manual LoadBalancer support
+# INGRESS_ENABLED=false                  # Manual NGINX Ingress Controller
 
 # =============================================================================
 # GITOPS CONFIGURATION (when FLUX_ENABLED=true)
 # =============================================================================
 
 # GITOPS_REPO=https://community.opengroup.org/danielscholl/osdu-ci
-# GITOPS_BRANCH=main                      # Git branch to sync
-# GITOPS_STAMP=sample                     # Stamp to deploy: sample, osdu-ci
+# GITOPS_BRANCH=main                     # Git branch to sync
+# GITOPS_STAMP=sample                    # Stamp to deploy: sample, osdu-ci
