docs: comprehensive AI-assisted development integration
- Add complete AI usage guide (docs/ai-guide.md) with clear distinction
  between primary AI agents and specialized sub-agents
- Integrate dual MCP servers (Kubernetes + Flux Operator) for AI assistance
- Add specialized sub-agents: cluster-agent (infrastructure) and
  software-agent (GitOps) currently exclusive to Claude Code
- Implement command prompts (/cluster-health, /commit, /prime) for
  complex workflows
- Enhance CLAUDE.md with comprehensive HostK8s context and AI guidance
- Add ADR-005 documenting AI integration architecture decisions
- Update configuration files (.mcp.json, .env.example) for AI tooling
- Add make mcp-status target for AI diagnostics
- Design optional integration that enhances productivity without
  impacting traditional workflows
- Acknowledge rapidly evolving AI landscape in documentation

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,10 @@
 # GITOPS_REPO=https://community.opengroup.org/danielscholl/osdu-ci
 # GITOPS_BRANCH=main                     # Git branch to sync
 # GITOPS_STAMP=sample                    # Stamp to deploy: sample, osdu-ci
+
+# =============================================================================
+# AI-ASSISTED GITOPS (MCP INTEGRATION)
+# =============================================================================
+
+# FLUX_MCP_ENABLED=true                  # Enable Flux MCP server for AI assistance
+# FLUX_MCP_READ_ONLY=false               # Set to true for read-only operations
