refactor: replace stamp terminology with stack throughout codebase
- Replace "stamp" with "stack" in all documentation, code, and file names
- Rename software/stamp/ directory to software/stack/
- Update environment variables: GITOPS_STAMP → GITOPS_STACK
- Remove OSDU-CI references, replace with generic hostk8s naming
- Update repository URLs from osdu-ci to hostk8s
- Update cluster names and labels throughout YAML files
- Maintain backward compatibility for core functionality

This improves clarity by using industry-standard "software stack"
terminology instead of the confusing "stamp" metaphor.

--- a/.env.example
+++ b/.env.example
@@ -28,9 +28,9 @@
 # GITOPS CONFIGURATION (when FLUX_ENABLED=true)
 # =============================================================================
 
-# GITOPS_REPO=https://community.opengroup.org/danielscholl/osdu-ci
+# GITOPS_REPO=https://community.opengroup.org/danielscholl/hostk8s
 # GITOPS_BRANCH=main                     # Git branch to sync
-# GITOPS_STAMP=sample                    # Stamp to deploy: sample, osdu-ci
+# GITOPS_STACK=sample                    # Stack to deploy: sample, sample-stack
 
 # =============================================================================
 # AI-ASSISTED GITOPS (MCP INTEGRATION)
