--- a/software/components/registry/certificate.yaml
+++ b/software/components/registry/certificate.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: registry
   labels:
     app: registry
-    osdu-ci.component: registry
+    hostk8s.component: registry
 spec:
   secretName: registry-tls-secret
   issuerRef:
