--- a/software/stack/sample/applications/api/namespace.yaml
+++ b/software/stack/sample/applications/api/namespace.yaml
@@ -4,4 +4,4 @@ metadata:
   name: sample-api
   labels:
     app.kubernetes.io/name: sample-api
-    osdu-ci.application: api
+    hostk8s.application: api
