--- a/software/stack/sample/applications/website/namespace.yaml
+++ b/software/stack/sample/applications/website/namespace.yaml
@@ -4,4 +4,4 @@ metadata:
   name: sample-website
   labels:
     app.kubernetes.io/name: sample-website
-    osdu-ci.application: website
+    hostk8s.application: website
