--- a/software/stack/sample/stack.yaml
+++ b/software/stack/sample/stack.yaml
@@ -1,5 +1,5 @@
 ######################
-## Sample Stamp Components
+## Sample Stack Components
 ## These must complete before applications
 ######################
 ---
