--- a/src/registry-demo/Dockerfile
+++ b/src/registry-demo/Dockerfile
@@ -9,7 +9,7 @@ ARG BUILD_VERSION=1.0.0
 
 LABEL org.opencontainers.image.created="${BUILD_DATE}"
 LABEL org.opencontainers.image.version="${BUILD_VERSION}"
-LABEL org.opencontainers.image.title="OSDU-CI Registry Demo"
+LABEL org.opencontainers.image.title="HostK8s Registry Demo"
 LABEL org.opencontainers.image.description="Demonstrates local registry integration with Kind"
 
 EXPOSE 80
