--- a/software/apps/sample/registry-demo/app.yaml
+++ b/software/apps/sample/registry-demo/app.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: default
   labels:
     app: registry-demo
-    osdu-ci.app: registry-demo
+    hostk8s.app: registry-demo
 spec:
   replicas: 2
   selector:
@@ -41,7 +41,7 @@ metadata:
   name: registry-demo
   namespace: default
   labels:
-    osdu-ci.app: registry-demo
+    hostk8s.app: registry-demo
 spec:
   selector:
     app: registry-demo
@@ -58,7 +58,7 @@ metadata:
   name: registry-demo
   namespace: default
   labels:
-    osdu-ci.app: registry-demo
+    hostk8s.app: registry-demo
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
