--- a/software/components/registry/deployment.yaml
+++ b/software/components/registry/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: registry
   labels:
     app: registry
-    osdu-ci.component: registry
+    hostk8s.component: registry
 spec:
   replicas: 1
   selector:
@@ -15,7 +15,7 @@ spec:
     metadata:
       labels:
         app: registry
-        osdu-ci.component: registry
+        hostk8s.component: registry
     spec:
       containers:
       - name: registry
