--- a/software/components/registry/service.yaml
+++ b/software/components/registry/service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: registry
   labels:
     app: registry
-    osdu-ci.component: registry
+    hostk8s.component: registry
 spec:
   selector:
     app: registry
@@ -28,7 +28,7 @@ metadata:
   namespace: registry
   labels:
     app: registry
-    osdu-ci.component: registry
+    hostk8s.component: registry
 spec:
   selector:
     app: registry
