--- a/software/stack/bootstrap.yaml
+++ b/software/stack/bootstrap.yaml
@@ -1,12 +1,12 @@
 ######################
-## Bootstrap for Sample Stamp
-## This kustomization applies the sample stamp kustomization.yaml
+## Bootstrap for Sample Stack
+## This kustomization applies the sample stack kustomization.yaml
 ## Apply once during cluster setup, then git sync handles everything
 ######################
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: bootstrap-stamp
+  name: bootstrap-stack
   namespace: flux-system
 spec:
   interval: 1m
@@ -15,7 +15,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./software/stamp/sample
+  path: ./software/stack/sample
   targetNamespace: flux-system
   prune: true
   wait: false
