--- a/software/stack/sample/applications/api/deployment.yaml
+++ b/software/stack/sample/applications/api/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: sample-api
   labels:
     app: sample-api
-    osdu-ci.application: api
+    hostk8s.application: api
 spec:
   replicas: 2
   selector:
@@ -15,7 +15,7 @@ spec:
     metadata:
       labels:
         app: sample-api
-        osdu-ci.application: api
+        hostk8s.application: api
     spec:
       containers:
       - name: api
@@ -46,7 +46,7 @@ metadata:
   name: sample-api-content
   namespace: sample-api
   labels:
-    osdu-ci.application: api
+    hostk8s.application: api
 data:
   index.html: |
     <!DOCTYPE html>
