--- a/software/stack/sample/components/database/source.yaml
+++ b/software/stack/sample/components/database/source.yaml
@@ -1,10 +1,10 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: ingress-nginx
+  name: bitnami
   namespace: flux-system
   labels:
-    osdu-ci.component: ingress-nginx
+    hostk8s.component: database
 spec:
   interval: 1h
-  url: https://kubernetes.github.io/ingress-nginx
+  url: https://charts.bitnami.com/bitnami
