--- a/software/stack/sample/components/ingress-nginx/source.yaml
+++ b/software/stack/sample/components/ingress-nginx/source.yaml
@@ -1,10 +1,10 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: bitnami
+  name: ingress-nginx
   namespace: flux-system
   labels:
-    osdu-ci.component: database
+    hostk8s.component: ingress-nginx
 spec:
   interval: 1h
-  url: https://charts.bitnami.com/bitnami
+  url: https://kubernetes.github.io/ingress-nginx
