Initial extension stack setup

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,12 @@
 # K8S_VERSION=v1.33.2                    # Kubernetes version (default: latest)
 # KIND_CONFIG=default                    # Kind config: minimal, simple, default
 
+# Package manager preference for tool installation:
+#   - Unset/empty: Auto-detect (prefer Homebrew, fallback to native)
+#   - brew: Force Homebrew only
+#   - native: Skip Homebrew, use native package manager (apt/apk)
+# PACKAGE_MANAGER=brew
+
 # =============================================================================
 # INFRASTRUCTURE ADD-ONS
 # =============================================================================
