refactor: rename GITOPS_STACK to SOFTWARE_STACK for clarity
- Update setup-flux.sh to use SOFTWARE_STACK variable
- Update Makefile to pass SOFTWARE_STACK in cluster operations
- Update documentation in README.md, CLAUDE.md, and .env.example
- Update software stack examples and extension documentation
- Maintain backward compatibility and auto-detection functionality

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@
 
 # GITOPS_REPO=https://community.opengroup.org/danielscholl/hostk8s
 # GITOPS_BRANCH=main                     # Git branch to sync
-# GITOPS_STACK=sample                    # Stack to deploy: sample, sample-stack
+# SOFTWARE_STACK=sample                  # Stack to deploy: sample, sample-stack
 
 # =============================================================================
 # AI-ASSISTED GITOPS (MCP INTEGRATION)
