--- a/.github/workflows/gitops-testing.yml
+++ b/.github/workflows/gitops-testing.yml
@@ -165,7 +165,7 @@ jobs:
           curl -X POST \
             -H "PRIVATE-TOKEN: ${{ secrets.GITLAB_TOKEN }}" \
             -H "Content-Type: application/json" \
-            "https://community.opengroup.org/api/v4/projects/1595/statuses/${{ github.event.client_payload.gitlab_commit_sha }}" \
+            "https://community.opengroup.org/api/v4/projects/${{ github.event.client_payload.gitlab_project_id }}/statuses/${{ github.event.client_payload.gitlab_commit_sha }}" \
             -d "{
               \"state\": \"running\",
               \"target_url\": \"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\",
@@ -486,7 +486,7 @@ jobs:
           curl -X POST \
             -H "PRIVATE-TOKEN: ${{ secrets.GITLAB_TOKEN }}" \
             -H "Content-Type: application/json" \
-            "https://community.opengroup.org/api/v4/projects/1595/statuses/${{ github.event.client_payload.gitlab_commit_sha }}" \
+            "https://community.opengroup.org/api/v4/projects/${{ github.event.client_payload.gitlab_project_id }}/statuses/${{ github.event.client_payload.gitlab_commit_sha }}" \
             -d "{
               \"state\": \"$state\",
               \"target_url\": \"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\",
