fix: update developer-agent tools and improve registry deployment configuration

--- a/software/components/registry/deployment.yaml
+++ b/software/components/registry/deployment.yaml
@@ -23,23 +23,14 @@ spec:
         ports:
         - containerPort: 5000
           name: http
-        - containerPort: 5443
-          name: https
         env:
         - name: REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY
           value: /var/lib/registry
         - name: REGISTRY_HEALTH_STORAGEDRIVER_ENABLED
           value: "true"
-        # HTTPS Configuration
-        - name: REGISTRY_HTTP_TLS_CERTIFICATE
-          value: /etc/ssl/certs/tls.crt
-        - name: REGISTRY_HTTP_TLS_KEY
-          value: /etc/ssl/certs/tls.key
+        # HTTP Configuration
         - name: REGISTRY_HTTP_ADDR
-          value: ":5443"
-        # Also listen on HTTP for compatibility
-        - name: REGISTRY_HTTP_HTTP2_DISABLED
-          value: "false"
+          value: ":5000"
         resources:
           requests:
             memory: "128Mi"
@@ -50,27 +41,21 @@ spec:
         volumeMounts:
         - name: registry-data
           mountPath: /var/lib/registry
-        - name: tls-certs
-          mountPath: /etc/ssl/certs
-          readOnly: true
         livenessProbe:
           httpGet:
             path: /v2/
-            port: 5443
-            scheme: HTTPS
+            port: 5000
+            scheme: HTTP
           initialDelaySeconds: 30
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /v2/
-            port: 5443
-            scheme: HTTPS
+            port: 5000
+            scheme: HTTP
           initialDelaySeconds: 5
           periodSeconds: 5
       volumes:
       - name: registry-data
         persistentVolumeClaim:
           claimName: registry-data
-      - name: tls-certs
-        secret:
-          secretName: registry-tls-secret
