--- a/infra/kubernetes/.gitignore
+++ b/infra/kubernetes/.gitignore
@@ -3,8 +3,7 @@
 
 # Allow specific configurations
 !/kind-custom.yaml
-!/kind-config-minimal.yaml
-!/kind-worker.yaml
+!/kind-minimal.yaml
 
 # Allow README at root level
 !/README.md
