--- a/software/apps/basic/kustomization.yaml
+++ b/software/apps/basic/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 metadata:
-  name: complex
+  name: basic
   labels:
-    hostk8s.app: complex
+    hostk8s.app: basic
 
 resources:
   - frontend-deployment.yaml
@@ -17,4 +17,4 @@ resources:
 
 labels:
   - pairs:
-      hostk8s.app: complex
+      hostk8s.app: basic
